--- a/boonelist-client/src/routes-nav/Navigation.css
+++ b/boonelist-client/src/routes-nav/Navigation.css
@@ -8,22 +8,25 @@ nav {
 	width: 100px;
 	text-align: center;
 	display: inline-block;
+	border: 5px solid transparent;
+	border-radius: 2px 2px 0 0;
+	text-decoration: none;
 }
 
 nav a {
 	color: #f0f2f5;
 	text-decoration: none;
+	border: 5px solid transparent;
+	font-weight: bold;
 }
 
 nav a.active {
-	color: #f0f2f5;
-	font-weight: bold;
-	border-bottom: 5px solid;
-	box-sizing: border-box;
+	color: rgb(255, 217, 0);
 }
 
 nav a.active:hover {
-	color: #f0f2f5 !important;
+	color: rgb(255, 217, 0) !important;
+	border-bottom-color: rgb(255, 217, 0) !important;
 }
 
 nav a:hover {
@@ -36,5 +39,6 @@ nav a.active.navbar-brand {
 }
 
 nav a:not(.navbar-brand):hover {
-	font-weight: bold;
+	border-bottom-color: #f0f2f5;
+	box-sizing: border-box;
 }
