Add vanilla styling, post comment fixed

--- a/boonelist-client/src/components/sales/SalesCard.css
+++ b/boonelist-client/src/components/sales/SalesCard.css
@@ -1,4 +1,10 @@
-.card {
+.SalesCard {
 	margin: auto;
 	width: 50%;
+	border: 1.5px groove lightslategray;
+	border-radius: 20px;
+}
+
+.SalesCard:hover {
+	background-color: rgb(219, 219, 219);
 }
