--- a/boonelist-client/src/components/services/ServicesDetail.css
+++ b/boonelist-client/src/components/services/ServicesDetail.css
@@ -1,3 +1,15 @@
+.ServicesDetail {
+	height: 100%;
+}
+
+.back-btn {
+	margin: auto;
+}
+
+.comments {
+	height: 100%;
+}
+
 .services-link {
 	color: white;
 	text-decoration: none;
