--- a/boonelist-client/src/components/comment/CommentCard.css
+++ b/boonelist-client/src/components/comment/CommentCard.css
@@ -1,3 +1,12 @@
 .CommentCard {
-	display: block;
+	max-width: 600px;
+	word-wrap: break-word;
+	vertical-align: middle;
+}
+
+#comment-border {
+	border: 1.5px groove lightslategray;
+	border-radius: 20px;
+	margin-bottom: 3px;
+	margin-top: 10px;
 }
