--- a/boonelist-client/src/components/comment/CommentCard.css
+++ b/boonelist-client/src/components/comment/CommentCard.css
@@ -4,6 +4,10 @@
 	vertical-align: middle;
 }
 
+.remove-comment-btn {
+	align-items: center;
+}
+
 #comment-border {
 	border: 1.5px groove lightslategray;
 	border-radius: 20px;
